# protoshop

./: CMakeLists.txt  LICENSE  README.md  common.h  customview.cpp  customview.h  icon.rc  imageres.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintregion.cpp  paintregion.h  serialize.cpp  transformablecurveitem.cpp  transformablecurveitem.h  transformableellipseitem.cpp  transformableellipseitem.h  transformablelineitem.cpp  transformablelineitem.h  transformablepathitem.cpp  transformablepathitem.h  transformablepolygonitem.cpp  transformablepolygonitem.h  transformablerectitem.cpp  transformablerectitem.h
jsonexample/: rat.json
